# tushare_MCP

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  claude_desktop_config.json  claude_desktop_config_http.json  docker-compose.yml  docker-entrypoint.sh  get_popular_stocks.py  pyproject.toml  report.txt  requirements.txt  server.py  server_http.py  start_http_server.bat  start_http_server.sh  sz000001.csv  test_inst_track.py  test_mainline_lifecycle.py  test_scan_announcement_signals.py
cache/: __init__.py  cache_manager.py  concept_cache_manager.py  cyq_perf_cache_manager.py  daily_basic_cache_manager.py  fina_indicator_cache_manager.py  index_cache_manager.py  index_daily_cache_manager.py  mapping_cache_manager.py  margin_cache_manager.py  margin_detail_cache_manager.py  stk_surv_cache_manager.py  stock_daily_cache_manager.py  stock_intraday_cache_manager.py  stock_rt_cache_manager.py  stock_weekly_cache_manager.py  指数数据表设计.md
config/: __init__.py  settings.py  token_manager.py
formatters/: __init__.py  financial_formatter.py
newfunction/: batch_data_collector.py  collect_industry_sectors.py  collect_last_week.py  create_t1_tables.py  data_collector.py  filter_20251218.py  min15_data_loader.py  min15_second_filter.py  run_filter_range.py  strategy_context.py  trading_strategy.py
prompts/: __init__.py  prompts.py
scripts/: analyze_concepts_20251203.py  analyze_hot_concepts_volume.py  diagnose_output.txt  quick_inst_scan.py  run_inst_track_scan.py  scan_inst_20251209.py
tests/: check_all_names.py  test_all_mcp_tools.py  test_all_mcp_tools_v2.py  (+7 more)
(+22 files in other folders)
