[project]
name = "tushare-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.18.37",
    "httpx>=0.24.0",
    "mcp>=0.1.0",
    "pandas>=1.5.0",
    "python-dotenv>=0.19.0",
    "starlette>=0.27.0",
    "tushare>=1.4.0",
    "uvicorn>=0.23.0",
]
